--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.11.0",
     "@next/font": "13.0.7",
     "boxicons": "^2.1.4",
+    "emailjs-com": "^3.2.0",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
