--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
     "@next/font": "13.0.7",
-    "boxicons": "^2.1.4",
     "emailjs-com": "^3.2.0",
     "next": "13.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-material-ui-carousel": "^3.4.2"
   }
 }
